--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=LPII_EF_CABRERASANCHEZANTHONY
+#spring.application.name=LPII_EF_CABRERASANCHEZANTHONY
+server.port=9293
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/bdcabrerasanchezef
+spring.datasource.username=root
+#spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
